--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       type="text/css"
       href="%PUBLIC_URL%/_dist_/index.css"
     />
-    <title>Snowpack & Tailwind App</title>
+    <title>AGUACATE!! AGUACATE!!</title>
   </head>
   <body>
     <!--
@@ -36,19 +36,21 @@
         <p
           class="text-base leading-6 text-indigo-600 font-semibold tracking-wide uppercase"
         >
-          Snowpack
+          LLevelo
         </p>
         <h3
           class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl sm:leading-10"
         >
-          Tailwind template
+        LLeve el aguacate
         </h3>
         <p class="mt-4 max-w-2xl text-xl leading-7 text-gray-500 mx-auto">
-          Use this template to build awesome websites using Snowpack and
-          Tailwind. It also includes Prettier and automatic publish to GitHub
-          pages using GitHub Actions. Learn more:
+         quiubo reina compreme el aguacate estan bonitos para el almuerzo<br>
+         !LLeve el aguacate
         </p>
-        <ul
+        <div id="app">
+          
+        </div>
+        <!-- <ul
           class="text-xl leading-7 sm:flex justify-around sm:max-w-2xl sm:mx-auto mt-10"
         >
           <li class="my-4 p-4 px-6 bg-gray-300 hover:bg-gray-500">
@@ -77,7 +79,7 @@
           <a href="https://github.com/jonalvarezz/snowpack-template-tailwind"
             >See on GitHub</a
           >
-        </p>
+        </p> -->
       </div>
     </div>
 
